@@ -1,0 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <tal:block replace="resource_library:zeit.cms.javascript"/>
+  </head>
+  <body id="body">
+    <div class="objectsequencewidget" id="testwidget">
+      <input type="hidden" name="testwidget.count" id="testwidget.count" value="0" />
+      <ul>
+      </ul>
+
+      <a rel="show_add_view" href="/zeit.cms.javascript/tests/addform.html">Add new</a>
+    </div>
+    <script type="text/javascript">
+      var application_url = '../../../';
+      var widget = new zeit.cms.ObjectSequenceWidget('testwidget');
+    </script>
+
+  </body>
+</html>
