@@ -1,11 +1,11 @@
 <div class="objectsequencewidget"
   tal:attributes="id view/name">
   <tal:data tal:repeat="item view/_getFormValue">
-      <input type="hidden" class="uniqueId" 
+      <input type="hidden" class="uniqueId"
         tal:attributes="
         name string:${view/name}.${repeat/item/index};
         id string:${view/name}.${repeat/item/index};
-        value item/uniqueId" 
+        value item/uniqueId"
         />
   </tal:data>
   <input tal:replace="structure view/marker" />
@@ -21,7 +21,7 @@
       Add new …
     </a>
   </div>
-  <div 
+  <div
     tal:condition="view/query_view"
     tal:content="structure view/query_view">
   </div>
